fix layout issue with footer

--- a/app/assets/stylesheets/base/mixins/_textures.scss
+++ b/app/assets/stylesheets/base/mixins/_textures.scss
@@ -108,7 +108,6 @@
   .texture-normal {
     // gradient color 1, gradient color 2, gradient angle, texture-number, 0=inverted or 1=normal  
     @include texture(180deg, $texture-top-background, $texture-bottom-background, 67, 1); 
-    float: left;
     height: 5em;
     width: 100%;
   }
