--- a/app/assets/stylesheets/partials/_breadcrumb.scss
+++ b/app/assets/stylesheets/partials/_breadcrumb.scss
@@ -37,7 +37,7 @@
     font-size: .8em;
     line-height: $breadcrumb-height;
     margin-bottom: 2px;
-    margin-right: -5px;
+    margin-right: -3px;
     padding: 0 $breadcrumb-height/4 0 $breadcrumb-height/2;
     position: relative;
     text-decoration: none;
