--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -5,8 +5,7 @@
   $footer-disclaimer-color: transparentize($footer-color, .6);
 
   background: $footer-background;
-  padding: $base-line-height;
-  padding-bottom: 1em;
+  padding: 1em;
   overflow: auto;
   width: 100%;
 
